# tigerquantum-delta

./: CITATION.cff  README.md  pyproject.toml  quantum_proof.py  requirements.txt
assets/audio_samples/: Voice_Identity_SingleTiger (UA).m4a  Voice_Identity_SingleTiger.m4a
concepts/: ooda_membrane  tiger_delta_engine_v1.cpp
docs/author/: CV_VLADYSLAV_HONCHAROV_AI_SECURITY.md.md
docs/whitepapers/: STRATEGIC_MEMORANDUM_V2_SINGLE_TIGER.md
src/: LICENSE.md  lumis.rs  main.rs  project_genesis_final.cpp  project_orakle  simul.rs
src/tiger_delta/: __init__.py  aad.py  core.py  resonance.py
tiger_delta/: __init__.py
tiger_delta/tests/: test_mechanics.py
